<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textViewNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/nomeCliente"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/textViewTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/telefone" />
    <TextView
        android:id="@+id/textViewDataPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dataPedido" />

    <TextView
        android:id="@+id/textViewValorPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valorPedido" />

</androidx.appcompat.widget.LinearLayoutCompat>